[project]
name = "test-pyo3"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nukipei", email = "nukishpimpon@gmail.com" }
]
dependencies = [
    "maturin>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_pyo3"]

[tool.maturin]
module-name = "string_sum"
